tests/core/snapshots/graphql-conformance-002.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
  @upstream(baseURL: "http://upstream/graphql", httpCache: 42) {
  query: Query
}

type BirthDay {
  day: Int!
  month: Int!
  year: Int
}

type Query {
  user(id: ID!): User! @graphQL(args: [{key: "id", value: "{{.args.id}}"}], name: "user")
}

type User {
  birthday: BirthDay!
  city: String
  friends: [User!]!
  id: ID!
  name: String!
}
