tests/core/snapshots/graphql-conformance-003.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Query {
  user(id: ID!): User!
    @graphQL(args: [{key: "id", value: "{{.args.id}}"}], url: "http://upstream/graphql", name: "user")
}

type User {
  id: ID!
  name: String!
  profilePic(size: Int, width: Int, height: Int): String!
}
