tests/core/snapshots/graphql-conformance-004.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "IOException: No mock found for request: POST http://upstream/graphql in tests/execution/graphql-conformance-004.md",
        "locations": [
          {
            "line": 2,
            "column": 3
          }
        ]
      }
    ]
  }
}
