tests/core/snapshots/graphql-conformance-006.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "friends": [
          {
            "id": 1,
            "name": "friend_1",
            "profilePic": "friend_1_pic"
          },
          {
            "id": 2,
            "name": "friend_2",
            "profilePic": "friend_2_pic"
          },
          {
            "id": 3,
            "name": "friend_3",
            "profilePic": "friend_3_pic"
          }
        ],
        "mutualFriends": [
          {
            "id": 1,
            "name": "mutual_friend_1",
            "profilePic": "mutual_friend_1_pic"
          },
          {
            "id": 2,
            "name": "mutual_friend_2",
            "profilePic": "mutual_friend_2_pic"
          },
          {
            "id": 3,
            "name": "mutual_friend_3",
            "profilePic": "mutual_friend_3_pic"
          }
        ]
      }
    }
  }
}
