tests/core/snapshots/graphql-conformance-006.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
  @upstream(baseURL: "http://upstream/graphql", httpCache: 42) {
  query: Query
}

type Query {
  user(id: ID!): User! @graphQL(args: [{key: "id", value: "{{.args.id}}"}], name: "user")
}

type User {
  friends(first: Int): [User!]!
  id: ID!
  mutualFriends(first: Int): [User!]!
  name: String!
  profilePic(height: Int, size: Int, width: Int): String!
}
